<resources>
    <string name="app_name">MovieApp</string>
    <string name="img_preview_descr">movie preview</string>
    <string name="image_favorite_descr">favorite image</string>
    <string name="test_string">TEST</string>
    <string name="refresh_button_descr">refresh button</string>
    <string name="kinopoisk_button_text">КиноПоиск</string>
    <string name="content_descr_poster">poster</string>
    <string name="text_view_yearL_text">Год</string>
    <string name="text_view_lengthL_text">Продолжительность</string>
    <string name="text_view_genreL_text">Жанр</string>
    <string name="text_view_countryL_text">Страна</string>
    <string name="text_view_videosL_text">Видео</string>
    <string name="text_view_factsL_text">Факты</string>
    <string name="text_view_similarsL_text">Похожие</string>
    <string name="text_view_numberPopL_text">Популярн.</string>
    <string name="text_view_number250L_text">Топ 250</string>
    <string name="text_view_numberAwaitL_text">Ожидаем.</string>
    <string name="image_view_trailer_descr">trailer image</string>
    <string name="favorite_added">Убран из избранного</string>
    <string name="favorite_deleted">Добавлен в избранное</string>
    <string name="text_view_spoiler_warn_text">Осторожно! Спойлер!</string>
    <string name="main_menu_main_title">Главная</string>
    <string name="main_menu_favourite_title">Избранное</string>
    <string-array name="spinner_top_items">
        <item>Топ популярных</item>
        <item>Топ 250 Кинопоиск</item>
        <item>Топ ожидаемых</item>
    </string-array>
</resources>