<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewPoster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_descr_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_launcher_foreground" />

        <View
            android:id="@+id/infoBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#99000000"
            app:layout_constraintBottom_toBottomOf="@+id/textViewVotesCount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNumberPop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingStart="6dp"
            android:paddingTop="0dp"
            android:paddingEnd="6dp"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/imageViewPoster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="13"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewNumberPopL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_numberPopL_text"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/textViewNumberPop"
            app:layout_constraintStart_toStartOf="@+id/textViewNumberPop"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumberPop"
            tools:ignore="SmallSp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewNumber250"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingStart="6dp"
            android:paddingTop="0dp"
            android:paddingEnd="6dp"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/textViewNumberPop"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="13"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewNumber250L"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_number250L_text"
            android:textColor="#b8860b"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/textViewNumber250"
            app:layout_constraintStart_toStartOf="@+id/textViewNumber250"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumber250"
            tools:ignore="SmallSp,TextContrastCheck"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewNumberAwait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingStart="6dp"
            android:paddingTop="0dp"
            android:paddingEnd="6dp"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/textViewNumber250"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="13"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewNumberAwaitL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_numberAwaitL_text"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/textViewNumberAwait"
            app:layout_constraintStart_toStartOf="@+id/textViewNumberAwait"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumberAwait"
            tools:ignore="SmallSp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:background="#99000000"
            android:paddingStart="6dp"
            android:paddingTop="3dp"
            android:paddingEnd="6dp"
            android:paddingBottom="3dp"
            android:text="@string/test_string"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/imageViewPoster"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewVotesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_string"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/textViewRating"
            app:layout_constraintStart_toStartOf="@+id/textViewRating"
            app:layout_constraintTop_toBottomOf="@+id/textViewRating"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imageViewStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textViewVotesCount"
            app:layout_constraintEnd_toStartOf="@+id/textViewRating"
            app:layout_constraintTop_toTopOf="@+id/textViewRating"
            app:srcCompat="@drawable/ic_baseline_star_36"
            tools:ignore="ContentDescription"
            tools:visibility="visible" />

        <include
            android:id="@+id/movieInfo"
            layout="@layout/movie_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageViewPoster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>